force-app/main/default/objects/Account/fields/Auto_Id__c.field-meta.xml
<CustomField>
    <fullName>Auto_Id__c</fullName>
    <label>Auto Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>