force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <label>Facebook</label>
    <length>40</length>
    <type>Text</type>
</CustomField>