force-app/main/default/objects/Account/fields/Legal_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Type__c</fullName>
    <label>Legal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>