force-app/main/default/objects/Account/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <label>Ownership Percentage</label>
    <summarizedField>Owner__c.Share__c</summarizedField>
    <summaryForeignKey>Owner__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>