force-app/main/default/objects/Account/fields/Provincial_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Provincial_Business_Number__c</fullName>
    <inlineHelpText>Provincial Business Number</inlineHelpText>
    <label>Provincial Business Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>