force-app/main/default/objects/Account/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <formula>IF( Total_Risk_Score__c &lt; 150 , &apos;Very Low&apos;,
IF( AND(Total_Risk_Score__c  &gt;= 150, Total_Risk_Score__c &lt; 224) , &apos;Low&apos;,
IF( AND(Total_Risk_Score__c  &gt;= 224, Total_Risk_Score__c &lt; 324), &apos;Medium&apos;,
IF( AND(Total_Risk_Score__c  &gt;= 324, Total_Risk_Score__c &lt; 449), &apos;High&apos;,
IF( Total_Risk_Score__c  &gt;= 449, &apos;Very HIgh&apos;,&apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>