force-app/main/default/objects/Account/fields/Total_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Risk_Score__c</fullName>
    <label>Total Risk Score</label>
    <summarizedField>Risk_Rating__c.Rating__c</summarizedField>
    <summaryForeignKey>Risk_Rating__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>