force-app/main/default/objects/Account/validationRules/share.validationRule-meta.xml
<ValidationRule>
    <fullName>share</fullName>
    <active>true</active>
    <errorConditionFormula>Ownership_Percentage__c &gt;100 ||  Ownership_Percentage__c &gt;100</errorConditionFormula>
    <errorMessage>Adjust the ownership shares</errorMessage>
</ValidationRule>